--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,21 +1,23 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Jo-Yao Hsu (JY Hsu)"
+nickname: "JY"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "images/author/john.png"
+image: "images/author/jy_hsu.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  email: "jyhsu506@gmail.com"
+  # phone: "+0123456789"
+  github: joyao
+  linkedin: jy-hsu
+  # researchgate: john-doe
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
+  - I am a Software Firmware Engineer
+  - I am a DevOps
+  - I am a Software Technical Leader
   - I love servers
-  - I work on open-source projects
   - I love to work with some fun projects
+  - I am familiar with Geomatics
+  - I am a certified Professional Survey Engineer
