--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -11,63 +11,59 @@ section:
 # Your experiences
 experiences:
 - company:
-    name: Example Co.
-    url: "https://www.example.com"
-    location: Dhaka Branch
-    logo: /images/sections/experiences/company1.jpg
+    name: Dell Technologies
+    url: "https://www.dell.com/"
+    location: Hybrid, Taiwan
+    logo: /images/sections/experiences/Dell_logo.png
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company1.jpg
     # company overview
-    overview: Example Co. is a widely recognized company for cloud-native development. It builds tools for Kubernetes.
+    # overview: Dell Technologies is the leader in digital transformation, providing digital technology solutions, products, and services to drive business success.
   positions:
-  - designation: Senior Software Engineer
-    start: Nov 2019
+  - designation: Senior Firmware Software Engineer
+    start: Apr 2023
     # don't provide end date if you are currently working there. It will be replaced by "Present"
     # end: Dec 2020
     # give some points about what was your responsibilities at the company.
     responsibilities:
-    - Design and develop XYZ tool for ABC task
-    - Design, develop and manage disaster recovery tool [Xtool](https://www.example.com) that backup Kubernetes volumes, databases, and cluster's resource definition.
-    - Lead backend team.
+    - Developed and source level debugged UEFI/BIOS firmware for Dell PowerEdge platform hyperscale C series server products.
+    - Led teams of 20 people (across 8 teams, 4 companies and 3 countries) in collaborative development of automation libraries. This project is Dell’s key implementation project in recent years.
 
-  - designation: Junior Software Engineer
-    start: Nov 2017
-    end: Oct 2019
+  - designation: Firmware Software Engineer
+    start: Nov 2021
+    end: Mar 2023
     responsibilities:
-    - Implement and test xyz feature for abc tool.
-    - Support client for abc tool.
-    - Learn k,d,w technology for xyz.
+    - Server UEFI/BIOS firmware development 
+    - Implemented automated daily BIOS build and testing for each platform, achieving "Shift-Left Testing" and improving program stability. Reduced pre-release testing labor costs and post-release BIOS error rates.
+    - Awarded DELL FY24 Game Changer Award for pioneering a new BIOS CI/CD workflow, fostering team and ODM ownership, and driving ongoing test case integration.
+    - Feature and integration automated testing CI/CD system architect.
+    - User friendly interface developer for automation system.
 
 - company:
-    name: PreExample Co.
-    url: "https://www.example.com"
-    location: Nowhere
-    logo: /images/sections/experiences/company2.jpg
+    name: CECI Engineering Consultants, Inc. Taiwan
+    url: "https://www.ceci.com.tw/"
+    location: Taipei, Taiwan
+    logo: /images/sections/experiences/CECI_logo.jpg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company2.jpg
-    overview: PreExample Co. is a gateway company to enter into Example co. So, nothing special here.
+    # overview: PreExample Co. is a gateway company to enter into Example co. So, nothing special here.
   positions:
-  - designation: Software Engineer
-    start: March 2016
-    end: May 2017
+  - designation: Technical Leader
+    start: September 2020
+    end: August 2021
     responsibilities:
-    - Write lots of example codes.
-    - Read lots of examples.
-    - See lots of example videos.
 
-- company:
-    name: Intern Counting Company (ICC).
-    url: "https://www.example.com"
-    location: Intern Land
-    logo: /images/sections/experiences/company3.jpg
-    # Can optionally show a different logo for dark theme
-    # darklogo: /images/sections/experiences/company3.jpg
-    overview: Intern counting Company (ICC) is responsible for counting worldwide intern Engineers.
-  positions:
-  - designation: Intern
-    start: Jun 2015
-    end: Jan 2016
+    - __Team Capability Optimization and Innovation Initiatives__
+    - Implemented automated third-party API testing, prioritizing integration with project CI/CD workflows to ensure efficient system stability monitoring for developers and maintain high product release quality.
+    - Directed a five-person development team, showcasing strong communication, coordination, and teamwork skills, overseeing code reviews and providing technical guidance.
+    - Spearheaded the adoption of Git flow and Agile-based SDLC for the software development team, potentially enhancing development efficiency by 65%.
+
+  - designation: Software Engineer
+    start: August 2018
+    end: September 2020
     responsibilities:
-    - Count lost of interns.
-    - Count more interns.
-    - Count me as an intern.
+
+    - __Web-based Services Full-stack solution planning, development and maintenance__
+    - Headed custom web development projects as the tech lead for the department's largest project, contributing expertise as a full-stack engineer across 15 large-scale projects.
+    - Devised a solution to refine address fuzzy matching, resulting in a notable 7% improvement in spatial data positioning precision.
+    - Overhauled the daily synchronization of cadastral databases between backend systems and external Oracle databases, resulting in a substantial 50% enhancement in fetching new spatial data.
