--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -29,6 +29,7 @@ projects:
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Production-Grade Container Scheduling and Management.
   tags: ["professional", "kubernetes", "cloud"]
+  image: https://img.ltn.com.tw/Upload/news/600/2019/03/30/phpUCF6ub.jpg
 
 - name: Tensorflow
   logo: /images/sections/projects/tensorflow.png
