feat: Updated icons

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -63,7 +63,7 @@ badges:
 
 - type: certification
   name: Dell Game Changer Award
-  url: "#"
+  url: "https://www.linkedin.com/in/jy-hsu/overlay/1635508027638/single-media-viewer/?profileId=ACoAACZFksUBw59JxqxKQJvK7vNsJcO2d3X2JiA"
   badge: "https://media.licdn.com/dms/image/C562DAQFGfR1cMWv7nw/profile-treasury-image-shrink_800_800/0/1668601978024?e=1716998400&v=beta&t=Tu69eO42-ATFHsYhmenW6FCBOX6L5_5tL0q9FmK0uk0"
 
 - type: certification
