--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -45,6 +45,8 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Setup online environment
+        run: ""
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
