--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -22,8 +22,8 @@ customMenus:
 
 # Specify OpenGraph Headers
 openGraph:
-  title: John's Blog
+  title: JY's Lab
   type: website
-  description: Portfolio and personal blog of John Doe.
-  image: images/author/john.png
+  description: Portfolio and personal blog of JY Hsu.
+  image: images/author/jy_hsu.png
   url: https://hugo-toha.github.io
