--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -12,24 +12,35 @@ section:
 buttons:
 - name: All
   filter: "all"
-- name: Professional
-  filter: "professional"
-- name: Academic
-  filter: "academic"
-- name: Hobby
-  filter: "hobby"
+- name: Tech Leader
+  filter: "lead"
+- name: Software
+  filter: "software"
+- name: Side Projects
+  filter: "sideprj"
 
 # your projects
 projects:
-- name: Kubernetes
-  logo: /images/sections/projects/kubernetes.png
-  role: Contributor
-  timeline: "March 2018 - Present"
-  repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
+- name: Geographic Information Integrated Application Platform
+  logo: /images/sections/skills/gis.svg
+  role: Team Lead
+  timeline: "October 2020 - August 2021"
+  repo: https://map.hl.gov.tw/HLGIS # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Production-Grade Container Scheduling and Management.
-  tags: ["professional", "kubernetes", "cloud"]
-  image: https://img.ltn.com.tw/Upload/news/600/2019/03/30/phpUCF6ub.jpg
+  tags: ["lead", "software"]
+  image: /images/sections/projects/thumbnail/hlgis.png
+
+- name: Urban Planning Application Management System
+  logo: /images/sections/skills/gis.svg
+  role: Team Lead
+  timeline: "October 2020 - August 2021"
+  repo: https://map.hl.gov.tw/HLUPWeb # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary: Production-Grade Container Scheduling and Management.
+  tags: ["lead", "software"]
+  image: /images/sections/projects/thumbnail/hlup.png
+
 
 - name: Tensorflow
   logo: /images/sections/projects/tensorflow.png
