--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -15,7 +15,7 @@ contactInfo:
 # some summary about what you do
 summary:
   - I am a Software Firmware Engineer
-  - I am a DevOps
+  - I am a DevSecOps Engineer
   - I am a Software Technical Leader
   - I love servers
   - I love to work with some fun projects
