--- a/hugo.yaml
+++ b/hugo.yaml
@@ -63,9 +63,9 @@ params:
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/website_logo.jpg
-    inverted: /images/site/website_logo.jpg
-    favicon: /images/site/website_logo.jpg
+    main: /images/site/website_logo.png
+    inverted: /images/site/website_logo.png
+    favicon: /images/site/website_logo.png
 
   # GitHub repo of your site
   gitRepo: https://github.com/joyao/joyao.github.io
