--- a/hugo.yaml
+++ b/hugo.yaml
@@ -58,7 +58,7 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/background.svg
 
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
@@ -81,7 +81,7 @@ params:
 
     # Enable dark theme
     darkMode:
-      enable: false
+      enable: true
 
     # Enable and configure portfolio
     portfolio:
